# collisional-coherence-harvesting

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: JOURNAL_RECOMMENDATIONS.md  PUBLICATION_READINESS.md  SMALL_PAPER_SCOPE.md  architecture.md  reading_list.md
docs/engine/: ENGINE_PAPER_PLAN.md  SIGN_CONVENTION.md
engine_paper/: README.md  main.tex  references.bib
figures/data/: companion_power_curve.npz
notebooks/: tutorial.ipynb
notes/: coherence_harvesting_note.tex  collisional_harvesting_derivations.tex
paper/: README.md  main.tex  references.bib
results/gate1/: GATE1_BOOST_REPORT.md  GATE1_REPORT.md  gate1_best_params.json  gate1_boost_scan.csv  gate1_scan.csv  gate1_scan.npz  positivity_log.txt
results/gate2/: GATE2_REPORT.md  gate2_oneshot.csv  gate2_stroboscopic.csv
results/stage2/: STAGE2_REPORT.md  ness_currents.json  stage2_controls.csv  stage2_rate_scan.csv  stage2_theta_scan.csv
results/stage3/: STAGE3_REPORT.md  chosen_window.json  engine_window_hits.csv  stage3_controls.csv  stage3_mode_compare.csv  stage3_rate_scan.csv  stage3_theta_scan.csv
results/stage4/: STAGE4_SUPPORT_REPORT.md  controls.csv  dual_output_rate.csv  load_sweep_ness.csv  paper_numbers.json  resource_map.csv
scripts/: gate1_boost_scan.py  gate1_resource_scan.py  gate2_harvest_scan.py  generate_figures.py  run_companion_demo.py  run_transport_demo.py  stage2_engine_scan.py  stage3_story_search.py  stage4_paper_support.py
tests/: test_collision_map.py  test_companion_power.py  test_stage2_currents.py  test_transport_engine.py
(+17 files in other folders)
