[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coherence-harvesting"
version = "0.1.0"
description = "Collisional harvesting of dissipatively stabilized spin coherence"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Noufal Jaseem" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
cch-companion = "coherence_harvesting.cli:run_companion"
cch-transport = "coherence_harvesting.cli:run_transport"
cch-figures = "coherence_harvesting.cli:run_figures"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
